--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,3 +6,11 @@
     border-left: 100px solid transparent;
     border-right: 100px solid transparent;
 }
+.circle {
+    width: 200px;
+    height: 200px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    border-radius: 100px;
+    background: red;
+}
