--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,3 +14,10 @@
     border-radius: 100px;
     background: red;
 }
+.square {
+    width: 200px;
+    height: 200px;
+    border: 1px solid #000;
+    background: red;
+    float: right;
+}
