--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -26,3 +26,9 @@
     height: 170px;
     background: red;
 }
+.oval {
+    width: 160px;
+    height: 200px;
+    background: red;
+    border-radius: 500px;
+}
